Update to use Java HttpClient instead of HttpURLConnection for integration tests with Docker